--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </tr>
             <tr>
                 <th>品种名称</th>
-                <td>高抗9号（优质）</td>
+                <td>高抗9号（优质棉种）</td>
             </tr>
             <tr>
                 <th>种植面积</th>
